@@ -11,6 +11,7 @@ import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class AlignmentValidator {
@@ -31,35 +32,47 @@ public class AlignmentValidator {
     }
 
     public List<BufferedImage> validateAlignment(int p1, int p2, int imagePage) throws Exception {
-        // Render pages (PDFBox uses 0-based indexing)
-        BufferedImage img1 = renderer1.renderImageWithDPI(p1 - 1, Config.RENDER_DPI);
-        BufferedImage img2 = renderer2.renderImageWithDPI(p2 - 1, Config.RENDER_DPI);
+        BufferedImage img1 = null, img2 = null, diff = null;
 
-        // Generate difference image
-        BufferedImage diff = ImageUtils.generateDiffImage(img1, img2);
+        if (p1 >= 0) img1 = renderer1.renderImageWithDPI(p1, Config.RENDER_DPI);
+        if (p2 >= 0) img2 = renderer2.renderImageWithDPI(p2, Config.RENDER_DPI);
 
-        // Save images and track file paths
-        String[] paths = saveImages(imagePage, img1, img2, diff);
-        resultMap.addAlignmentRow(List.of(paths));
+        if (img1 != null && img2 != null) {
+            diff = ImageUtils.generateDiffImage(img1, img2);
+        }
+        resultMap.addAlignmentRow(saveImages(imagePage, img1, img2, diff));
 
-        // Return images
-        return List.of(img1, img2, diff);
+        return Arrays.asList(img1, img2, diff);
     }
 
 
-    private String[] saveImages(int pageNumber, BufferedImage img1, BufferedImage img2, BufferedImage diff) throws Exception {
+
+    private List<String> saveImages(int pageNumber, BufferedImage img1, BufferedImage img2, BufferedImage diff) throws Exception {
         String dirPath = String.format("%s/item_%d/alignment/page_%d", outputImagePath, rowIndex + 1, pageNumber);
         File dir = new File(dirPath);
         if (!dir.exists()) dir.mkdirs();
 
-        File img1File = new File(dir, "img1" + FileTypes.IMAGE_EXTENSION);
-        File img2File = new File(dir, "img2" + FileTypes.IMAGE_EXTENSION);
-        File diffFile = new File(dir, "diff" + FileTypes.IMAGE_EXTENSION);
+        String path1 = null, path2 = null, pathDiff = null;
 
-        ImageIO.write(img1, FileTypes.IMAGE_TYPE, img1File);
-        ImageIO.write(img2, FileTypes.IMAGE_TYPE, img2File);
-        ImageIO.write(diff, FileTypes.IMAGE_TYPE, diffFile);
+        if (img1 != null) {
+            File img1File = new File(dir, "img1" + FileTypes.IMAGE_EXTENSION);
+            ImageIO.write(img1, FileTypes.IMAGE_TYPE, img1File);
+            path1 = img1File.getPath();
+        }
 
-        return new String[]{img1File.getPath(), img2File.getPath(), diffFile.getPath()};
+        if (img2 != null) {
+            File img2File = new File(dir, "img2" + FileTypes.IMAGE_EXTENSION);
+            ImageIO.write(img2, FileTypes.IMAGE_TYPE, img2File);
+            path2 = img2File.getPath();
+        }
+
+        if (diff != null) {
+            File diffFile = new File(dir, "diff" + FileTypes.IMAGE_EXTENSION);
+            ImageIO.write(diff, FileTypes.IMAGE_TYPE, diffFile);
+            pathDiff = diffFile.getPath();
+        }
+
+        return Arrays.asList(path1, path2, pathDiff);
     }
+
 }
